Added shuffling for new cards.

--- a/experiments/01-spacy-rule-based-matching.ipynb
+++ b/experiments/01-spacy-rule-based-matching.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c1032770",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "9310b74e",
    "metadata": {},
    "outputs": [],
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "0d713766",
    "metadata": {},
    "outputs": [
@@ -365,74 +365,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15659252742081136678 simple_phrase 42 45 Auf dem Bild\n",
-      "15659252742081136678 simple_phrase 48 51 mit den Rapunzeln\n",
-      "15659252742081136678 simple_phrase 104 107 an einem Feld\n",
-      "15659252742081136678 simple_phrase 121 124 um das Feld\n",
-      "15659252742081136678 simple_phrase 129 132 auf das Feld\n",
-      "15659252742081136678 simple_phrase 146 149 vor der Zauberin\n",
-      "15659252742081136678 simple_phrase 166 169 Auf dem Feld\n",
-      "15659252742081136678 simple_phrase 169 172 von der Zauberin\n",
-      "15659252742081136678 simple_phrase 188 191 von den Rapunzeln\n",
-      "15659252742081136678 simple_phrase 197 200 von den Rapunzeln\n",
-      "15659252742081136678 simple_phrase 208 211 zu ihrem Mann\n",
-      "15659252742081136678 simple_phrase 239 242 Auf dem Bild\n",
-      "15659252742081136678 simple_phrase 282 285 mit den Rapunzeln\n",
-      "15659252742081136678 simple_phrase 294 297 auf das Feld\n",
-      "15659252742081136678 simple_phrase 311 314 auf die Nacht\n",
-      "15659252742081136678 simple_phrase 341 344 über die Mauer\n",
-      "15659252742081136678 simple_phrase 348 351 auf das Feld\n",
-      "15659252742081136678 simple_phrase 384 387 von den Rapunzeln\n",
-      "15659252742081136678 simple_phrase 394 397 zu ihrem Mann\n",
-      "15659252742081136678 simple_phrase 454 457 über die Mauer\n",
-      "15659252742081136678 simple_phrase 461 464 auf das Feld\n",
-      "15659252742081136678 simple_phrase 478 481 vor dem Mann\n",
-      "15659252742081136678 simple_phrase 530 533 Auf dem Bild\n",
-      "15659252742081136678 simple_phrase 609 612 von meinen Rapunzeln\n",
-      "15659252742081136678 simple_phrase 645 648 für die Rapunzeln\n",
-      "15659252742081136678 simple_phrase 712 715 in der Tür\n",
-      "15659252742081136678 simple_phrase 740 743 in einen Turm\n",
-      "15659252742081136678 simple_phrase 771 774 in dem Turm\n",
-      "15659252742081136678 simple_phrase 807 810 auf die Erde\n",
-      "15659252742081136678 simple_phrase 853 856 Auf dem Bild\n",
-      "15659252742081136678 simple_phrase 866 869 in den Turm\n",
-      "15659252742081136678 simple_phrase 874 877 in dem Turm\n",
-      "15659252742081136678 simple_phrase 921 924 zu einem Zopf\n",
-      "15659252742081136678 simple_phrase 954 957 An einem Tag\n",
-      "15659252742081136678 simple_phrase 960 963 durch den Wald\n",
-      "15659252742081136678 simple_phrase 968 971 an dem Turm\n",
-      "15659252742081136678 simple_phrase 1007 1010 in den Turm\n",
-      "15659252742081136678 simple_phrase 1032 1035 auf seinem Pferd\n",
-      "15659252742081136678 simple_phrase 1049 1052 von dem Mädchen\n",
-      "15659252742081136678 simple_phrase 1064 1067 zu dem Turm\n",
-      "15659252742081136678 simple_phrase 1076 1079 von dem Mädchen\n",
-      "15659252742081136678 simple_phrase 1087 1090 hinter einem Baum\n",
-      "15659252742081136678 simple_phrase 1149 1152 in den Turm\n",
-      "15659252742081136678 simple_phrase 1206 1209 Auf dem Bild\n",
-      "15659252742081136678 simple_phrase 1298 1301 vor dem Prinzen\n",
-      "15659252742081136678 simple_phrase 1352 1355 aus dem Turm\n",
-      "15659252742081136678 simple_phrase 1379 1382 Aus dem Stoff\n",
-      "15659252742081136678 simple_phrase 1413 1416 in mein Schloss\n",
-      "15659252742081136678 simple_phrase 1444 1447 von dem Prinzen\n",
-      "15659252742081136678 simple_phrase 1457 1460 An einem Abend\n",
-      "15659252742081136678 simple_phrase 1468 1471 zu der Zauberin\n",
-      "15659252742081136678 simple_phrase 1566 1569 An diesem Ort\n",
-      "15659252742081136678 simple_phrase 1700 1703 vor der Zauberin\n",
-      "15659252742081136678 simple_phrase 1709 1712 aus dem Turm∙fenster\n",
-      "15659252742081136678 simple_phrase 1751 1754 durch den Wald\n",
-      "15659252742081136678 simple_phrase 1774 1777 Nach vielen Jahren\n",
-      "15659252742081136678 simple_phrase 1821 1824 auf die Stimme\n",
-      "15659252742081136678 simple_phrase 1850 1853 Auf dem Bild\n",
-      "15659252742081136678 simple_phrase 1861 1864 von dem Prinzen\n",
-      "15659252742081136678 simple_phrase 1880 1883 auf den Prinzen\n",
-      "15659252742081136678 simple_phrase 1943 1946 von dem Prinzen\n",
-      "15659252742081136678 simple_phrase 1963 1966 auf sein Schloss\n"
+      "wissen von den Rapunzeln\n",
+      "ART\n",
+      "klettert über die Mauer\n",
+      "ART\n",
+      "geht auf das Feld\n",
+      "ART\n",
+      "geht auf das Feld\n",
+      "ART\n",
+      "wächst in dem Turm\n",
+      "ART\n",
+      "reitet an dem Turm\n",
+      "ART\n",
+      "sagt zu der Zauberin\n",
+      "ART\n",
+      "geht auf die Stimme\n",
+      "ART\n",
+      "läuft auf den Prinzen\n",
+      "ART\n"
      ]
     }
    ],
    "source": [
     "import spacy\n",
     "from spacy.matcher import Matcher\n",
+    "from spacy.tokens import Span\n",
     "\n",
     "# load model\n",
     "nlp = spacy.load(\"de_core_news_sm\")\n",
@@ -444,22 +401,21 @@
     "# pattern = [{\"POS\": \"DET\"}, {\"POS\": \"NOUN\"}, {\"POS\": \"VERB\"}, {\"POS\": \"ADP\"}, {\"POS\": \"DET\"}, {\"POS\": \"NOUN\"}]\n",
     "# pattern = [{\"POS\": \"DET\"}, {\"POS\": \"NOUN\"}, {\"POS\": \"VERB\"}, {\"POS\": \"ADV\"}, {\"POS\": \"PRON\"}]\n",
     "# pattern = [{\"POS\": \"ADV\"}, {\"POS\": \"VERB\"}, {\"POS\": \"DET\"}, {\"POS\": \"NOUN\"}, {\"POS\": \"PRON\"}]\n",
-    "pattern = [{\"POS\": \"ADP\"}, {\"POS\": \"DET\"}, {\"POS\": \"NOUN\"}]\n",
+    "pattern = [{\"POS\": \"VERB\"}, {\"POS\": \"ADP\"}, {\"POS\": \"DET\"}, {\"POS\": \"NOUN\"}]\n",
     "matcher.add(\"simple_phrase\", [pattern])\n",
     "\n",
     "doc = nlp(text)\n",
-    "matches = matcher(doc)\n",
-    "# print(matches)\n",
-    "for match_id, start, end in matches:\n",
-    "    string_id = nlp.vocab.strings[match_id]  # Get string representation\n",
-    "    span = doc[start:end]  # The matched span\n",
-    "    print(match_id, string_id, start, end, span.text)"
+    "matches = matcher(doc, as_spans=True)\n",
+    "for span in matches:\n",
+    "    print(span)\n",
+    "    print(span[2].tag_)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399b1151",
+   "id": "8adb005f",
    "metadata": {},
    "outputs": [],
    "source": []
